GROOVY-3305 If a method's first argument was a BigDecimal/Byte/Double/Float/Integer/Long/Short, then passing a list of arguments did not spread into individual arguments correctly. Fixed that.
git-svn-id: http://svn.codehaus.org/groovy/trunk/groovy/groovy-core@15154 a5544e8c-8a19-0410-ba12-f9af4593a198